--- a/scss/utils/_cards.scss
+++ b/scss/utils/_cards.scss
@@ -10,7 +10,7 @@
     color: $brown;
   }
 
-  button {
+  button, a {
     background-color: $brown-button;
     border: none;
     color: $white;
@@ -76,7 +76,7 @@
     color: $white;
   }
 
-  button {
+  button, a {
     background-color: $neutral-100;
     border: none;
     color: $brown-900;
@@ -137,7 +137,7 @@
     color: $white;
   }
 
-  button {
+  button, a {
     background-color: #dcb3b0;
     border: none;
     color: $brown-900;
