--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -43,6 +43,7 @@
   align-items: center;
   background-color: $background-color;
   color: $color;
+  cursor: pointer;
 }
 
 @mixin card() {
@@ -83,4 +84,12 @@
 @mixin normalize-button {
   background-color: transparent;
   border-style: hidden;
+}
+
+@mixin heading {
+  font-size: 2.5rem;
+
+  @include mobile {
+    font-size: 1.5rem;
+  }
 }
